2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Document libepc-ui widgets.

	* docs/reference/libepc/libepc-docs.xml: Add libepc-ui sections.
	* docs/reference/libepc/libepc-sections.txt: Add libepc-ui symbols.
	* docs/reference/libepc/Makefile.am: Add libepc-ui.
	* libepc-ui/entropy-window.c, libepc-ui/entropy-window.h:
	Add API documentation and rename EpcEntropyProgress to EpcEntropyWindow.
	* libepc-ui/password-dialog.c, libepc-ui/password-dialog.h: Add docs.
	* libepc/consumer.h, libepc/dispatcher.h, libepc/publisher.h:
	Add /*< public >*/ annotations to make gtk-doc happy.
	* libepc/protocol.c: Link to epc_service_type_new.
	* Makefile.am, examples/server-credentials.c:
	Rename EpcEntropyProgress to EpcEntropyWindow.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Finish API documentation.

	* libepc/consumer.c, libepc/dispatcher.c, libepc/dispatcher.h,
	libepc/publisher.c, libepc/shell.c: Finish API documentation.
	* docs/reference/libepc/libepc-docs.xml: Add chapters comments.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Split service-type files into service-type and protocol files
	for better documentation. Update documentation.

	* docs/reference/libepc/libepc-sections.txt: Update symbols.
	* libepc/protocol.c, libepc/protocol.h: Take over the EpcProtocol
	related functions of the service-type files. Update documentation.
	* libepc/service-type.c, libepc/service-type.h: Drop the EpcProtocol
	related functions. Update documentation.
	* Makefile.am: Add protocol.c and protocol.h

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Update documentation and add an error argument
	to epc_shell_create_avahi_client.

	* docs/reference/libepc/libepc-sections.txt: Updated symbols.
	* libepc/shell.c, libepc/shell.h: Document functions. Add error
	argument to epc_shell_create_avahi_client.
	* libepc/consumer.c, libepc/dispatcher.c, tests/framework.c:
	Pass error argument to epc_shell_create_avahi_client.
